# vrf-rs

./: Cargo.toml  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
src/: challenge.rs  curve.rs  ecvrf.rs  ecvrf_test.rs  encode2curve.rs  encode_to_curve.rs  error.rs  lib.rs  nonce.rs  utils.rs
src/tests/: ECVRF_SECP256K1_SHA256_TAI.json  mod.rs  secp256k1_sha256_tai.rs
src/tests/p256_sha256_tai/: ecvrf.rs  encode_to_curve.rs  mod.rs  nonce.rs
src/tests/secp256k1_sha256_tai/: mod.rs  test_vectors.rs
