[package]
name = "vrf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = { version = "0.13", default-features = false, features = ["sec1"]}
p256 = { version = "0.13.2", features = ["default", "hash2curve", "sha256", "expose-field"] }
k256 = { version = "0.13.1", features = ["default", "hash2curve", "sha256", "expose-field"] }
thiserror = "1.0.48"
sha2 = "0.10"
primeorder = "0.13"
hex = "0.4"
rfc6979 = "0.4"
hex-literal = "0.4"

[dev-dependencies]