[package]
name = "vrf-rs"
version = "0.0.0"
edition = "2021"
authors = ["SEDA <info@seda.xyz>"]
repository = "https://github.com/sedaprotocol/vrf-rs"
description = "Fast and extensible Elliptic Curve Verifiable Random Function (VRF) library; currently supporting secp256k1 and secp256r1 curves"
keywords = ["vrf", "ecvrf", "secp256k1", "p256"]
categories = ["algorithms", "cryptography"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = { version = "0.13", default-features = false, features = ["sec1"]}
p256 = { version = "0.13", default-features = false, features = ["expose-field", "hash2curve"] }
k256 = { version = "0.13", default-features = false, features = ["expose-field", "hash2curve"] }
thiserror = "1.0"
sha2 = "0.10"
rfc6979 = "0.4"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4"
serde_json = "1.0.108"
